# process-monitor

./: README.md  build.sh  meson.build
data/: process-monitor.gresource.xml
data/ui/: baobab-chart-menu.ui  baobab-chart.css  baobab-process-window.ui
src/: baobab-chart.vala  baobab-memory-cell.vala  baobab-process-application.vala  baobab-process-cell.vala  baobab-process-scanner.vala  baobab-process-window.vala  baobab-ringschart.vala  config.vapi  process-main.vala
